[gd_scene load_steps=7 format=3 uid="uid://bygi8xi6bv4y2"]

[ext_resource type="Script" path="res://scenes/level/level.gd" id="1_avm3s"]
[ext_resource type="PackedScene" uid="uid://bn7n3h61efd5g" path="res://scenes/player/player.tscn" id="2_3j6en"]
[ext_resource type="PackedScene" uid="uid://dm3qbnnc28gw5" path="res://scenes/tilemap/tile_map.tscn" id="4_eklwn"]
[ext_resource type="PackedScene" uid="uid://blphuq6acnyg" path="res://scenes/lantern/lantern.tscn" id="5_ixwxy"]
[ext_resource type="PackedScene" uid="uid://d21uspc35d462" path="res://scenes/enemy/enemy1.tscn" id="5_xo137"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ekkrk"]

[node name="Level" type="Node2D"]
script = ExtResource("1_avm3s")

[node name="Player" parent="." instance=ExtResource("2_3j6en")]
position = Vector2(421, 568)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
blend_mode = 1

[node name="Bullets" type="Node2D" parent="."]

[node name="RemoveBullet" type="Timer" parent="."]
one_shot = true

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(-1182, 387)
scale = Vector2(2, 2)

[node name="TileMap" parent="." instance=ExtResource("4_eklwn")]
position = Vector2(-1182, 387)
scale = Vector2(2, 2)

[node name="enemy" parent="." node_paths=PackedStringArray("player") instance=ExtResource("5_xo137")]
position = Vector2(417.32, -287.94)
motion_mode = 1
player = NodePath("../Player")

[node name="mapborder" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mapborder"]
position = Vector2(404, 770)
shape = SubResource("WorldBoundaryShape2D_ekkrk")

[node name="lantern" parent="." instance=ExtResource("5_ixwxy")]
position = Vector2(194, -529)

[node name="lantern2" parent="." instance=ExtResource("5_ixwxy")]
position = Vector2(641, -530)

[node name="lantern3" parent="." instance=ExtResource("5_ixwxy")]
position = Vector2(588, 449)

[node name="lantern4" parent="." instance=ExtResource("5_ixwxy")]
position = Vector2(2, -1053)

[node name="lantern5" parent="." instance=ExtResource("5_ixwxy")]
position = Vector2(-828, -1706)

[node name="lantern6" parent="." instance=ExtResource("5_ixwxy")]
position = Vector2(1627, 361)

[node name="lantern7" parent="." instance=ExtResource("5_ixwxy")]
position = Vector2(932, 302)

[node name="lantern8" parent="." instance=ExtResource("5_ixwxy")]
position = Vector2(-287, 312)

[node name="enemy2" parent="." instance=ExtResource("5_xo137")]
position = Vector2(-1024.68, 186.06)

[node name="enemy3" parent="." instance=ExtResource("5_xo137")]
position = Vector2(1733.32, -103.94)

[node name="enemy4" parent="." instance=ExtResource("5_xo137")]
position = Vector2(1527.32, -687.94)

[node name="enemy5" parent="." instance=ExtResource("5_xo137")]
position = Vector2(-568.68, -1165.94)

[node name="enemy6" parent="." instance=ExtResource("5_xo137")]
position = Vector2(-444.68, -397.94)

[connection signal="shoot" from="Player" to="." method="_on_player_shoot"]
[connection signal="timeout" from="RemoveBullet" to="." method="_on_remove_bullet_timeout"]
[connection signal="shoot" from="enemy" to="." method="_on_enemy_shoot"]
